fix: wider nav background on mobile

--- a/src/layouts/general/layout.module.css
+++ b/src/layouts/general/layout.module.css
@@ -183,7 +183,7 @@
 }
 
 .nav__background img {
-  width: 50vw;
+  width: 100vw;
 }
 
 .nav__background__active {
